namespace Model.Base.Enums {     // kanskje ha med runder med forjskjellige funkjsoner osv, evt. en abstrakt Level/Round også flere leveler osv


    /// <summary>
    /// 1 = helmet
    /// 2 = TRINCKET
    /// 3 = Shield
    /// 4 = Gloves
    /// 5 = shoes
    /// </summary>
    public enum Item {
        RABBITSFOOT=2,
        WIKINGHELMET =1,
        BRONZEHELMET = 1,
        WOODENSHIELD =3,
        IRONSHILED
    }
}
