using Model.Abstract;

namespace Model.Characters
{
    public class Enemy : Character
    {

        public Enemy(int health) {
            Health = health;
        }

    }
}