using Model.Abstract;

namespace Model.Characters
{
    public class Player : Character
    {
        
        public Player(int health) {
            Health = health;
        } 
    }
}
