namespace Model.Enums {
   
        public enum GearItems {
            HELMET,
            SHOES,
            SHIELD,
            CHAIN

        }
    }

