namespace Model.Interface
{
    public interface IWeapon
    {
        //TODO: not smart
        public double Damage { get; set; }
        string Name { get; }



    }
}